[Minor] Code tweaks: making use of method references, collating duplicated exception handling, minor performance improving when dealing with single item lists.